-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 16
-
Component/s: hotspot
-
b13
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8280225 | 11.0.15-oracle | Fairoz Matte | P3 | Resolved | Fixed | b03 |
| JDK-8273574 | 11.0.14 | Vladimir Kempik | P3 | Resolved | Fixed | b01 |
Aarch64 code sometime freely exchange int64_t and intptr_t. This is a problem for toolchains that do not have shared underlying type for them.
I.e darwin uses `long long` for int64_t https://github.com/apple/darwin-xnu/blob/master/bsd/sys/_types/_int64_t.h and long for intptr_t https://github.com/apple/darwin-xnu/blob/master/bsd/arm/_types.h
For example, declaration
http://hg.openjdk.java.net/jdk/jdk/file/f74d10596242/src/hotspot/cpu/aarch64/assembler_aarch64.hpp#l716
defintion:
http://hg.openjdk.java.net/jdk/jdk/file/f74d10596242/src/hotspot/cpu/aarch64/assembler_aarch64.cpp#l1546
I.e darwin uses `long long` for int64_t https://github.com/apple/darwin-xnu/blob/master/bsd/sys/_types/_int64_t.h and long for intptr_t https://github.com/apple/darwin-xnu/blob/master/bsd/arm/_types.h
For example, declaration
http://hg.openjdk.java.net/jdk/jdk/file/f74d10596242/src/hotspot/cpu/aarch64/assembler_aarch64.hpp#l716
defintion:
http://hg.openjdk.java.net/jdk/jdk/file/f74d10596242/src/hotspot/cpu/aarch64/assembler_aarch64.cpp#l1546
- backported by
-
JDK-8273574 AArch64: Native types mismatch in hotspot
-
- Resolved
-
-
JDK-8280225 AArch64: Native types mismatch in hotspot
-
- Resolved
-
- relates to
-
JDK-8248414 AArch64: Remove uses of long and unsigned long ints
-
- Resolved
-
-
JDK-8253795 Implementation of JEP 391: macOS/AArch64 Port
-
- Resolved
-
(1 links to)