8251930: Native types mismatch in hotspot

Reviewed-by: aph